// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiListGroup is rendered 1`] = `
<ul
  aria-label="aria-label"
  class="euiListGroup euiListGroup--gutterS euiListGroup-maxWidthDefault testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`EuiListGroup is rendered with listItems 1`] = `
<ul
  class="euiListGroup euiListGroup--gutterS euiListGroup-maxWidthDefault"
>
  <li
    class="euiListGroupItem euiListGroupItem--medium"
  >
    <span
      class="euiListGroupItem__text"
    >
      <div
        class="euiListGroupItem__icon"
        data-euiicon-type="stop"
      />
      <span
        class="euiListGroupItem__label"
        title="Label with iconType"
      >
        Label with iconType
      </span>
    </span>
  </li>
  <li
    class="euiListGroupItem euiListGroupItem--medium euiListGroupItem-hasExtraAction"
  >
    <span
      class="euiListGroupItem__text"
    >
      <span
        class="euiListGroupItem__label"
        title="Custom extra action"
      >
        Custom extra action
      </span>
    </span>
    <button
      class="euiButtonIcon euiButtonIcon--primary euiListGroupItem__extraAction euiListGroupItem__extraAction-alwaysShow"
      type="button"
    >
      <div
        aria-hidden="true"
        class="euiButtonIcon__icon"
        data-euiicon-type="bell"
      />
    </button>
  </li>
  <li
    class="euiListGroupItem euiListGroupItem--medium euiListGroupItem-isClickable"
  >
    <button
      class="euiListGroupItem__button"
      type="button"
    >
      <span
        class="euiListGroupItem__label"
        title="Button with onClick"
      >
        Button with onClick
      </span>
    </button>
  </li>
  <li
    class="euiListGroupItem euiListGroupItem--medium euiListGroupItem-isClickable"
  >
    <a
      class="euiListGroupItem__button"
      href="#"
    >
      <span
        class="euiListGroupItem__label"
        title="Link with href"
      >
        Link with href
      </span>
    </a>
  </li>
</ul>
`;

exports[`EuiListGroup props bordered is rendered 1`] = `
<ul
  class="euiListGroup euiListGroup-bordered euiListGroup--gutterS euiListGroup-maxWidthDefault"
/>
`;

exports[`EuiListGroup props flush is rendered 1`] = `
<ul
  class="euiListGroup euiListGroup-flush euiListGroup--gutterS euiListGroup-maxWidthDefault"
/>
`;

exports[`EuiListGroup props gutter size m is rendered 1`] = `
<ul
  class="euiListGroup euiListGroup--gutterM euiListGroup-maxWidthDefault"
/>
`;

exports[`EuiListGroup props gutter size none is rendered 1`] = `
<ul
  class="euiListGroup euiListGroup-maxWidthDefault"
/>
`;

exports[`EuiListGroup props gutter size s is rendered 1`] = `
<ul
  class="euiListGroup euiListGroup--gutterS euiListGroup-maxWidthDefault"
/>
`;

exports[`EuiListGroup props maxWidth as a number is rendered 1`] = `
<ul
  class="euiListGroup euiListGroup--gutterS"
  style="max-width:300px"
/>
`;

exports[`EuiListGroup props maxWidth as a string is rendered 1`] = `
<ul
  class="euiListGroup euiListGroup--gutterS"
  style="max-width:20em"
/>
`;

exports[`EuiListGroup props maxWidth as true is rendered 1`] = `
<ul
  class="euiListGroup euiListGroup--gutterS euiListGroup-maxWidthDefault"
/>
`;

exports[`EuiListGroup props showToolTips is rendered 1`] = `
<ul
  class="euiListGroup euiListGroup--gutterS euiListGroup-maxWidthDefault"
/>
`;

exports[`EuiListGroup props wrapText is rendered 1`] = `
<ul
  class="euiListGroup euiListGroup--gutterS euiListGroup-maxWidthDefault"
/>
`;
